fixed multiFileExtract